--- a/Session-2/barista-agent-system/MCP-Server/menu_mcp/pyproject.toml
+++ b/Session-2/barista-agent-system/MCP-Server/menu_mcp/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "barista-agent-system"
+name = "menu-mcp"
 version = "0.1.0"
 description = ""
 authors = ["jggomez <juan.gomez01@gmail.com>"]
@@ -7,14 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-google-adk = "^1.17.0"
 google-cloud-firestore = "^2.21.0"
-pillow = "^12.0.0"
 python-dotenv = "^1.2.1"
-pyyaml = "^6.0.3"
-google-cloud-logging = "^3.12.1"
 mcp = "^1.22.0"
-toolbox-core = "^0.5.3"
+google-genai = "^1.52.0"
+fastmcp = "^2.13.2"
 
 
 [build-system]
